2000-11-09  Pascal Obry  <obry@gnat.com>

	* config.sdefault: change to use files instead of pipe to work
	around a bug under NT (using the MKS toolkit).

2000-09-21  Laurent Pautet  <pautet@arlequin>

	* xe_stubs.adb: register shared passive units even when they are
	configured on active partitions (bug found by reading). Do not
	load any storage support when no passive units are present. Load a
	default storage support when a shared passive unit is present or
	visible on a partition with no data storage location. Otherwise,
	load the storage support when configured.

	* xe_utils.adb: add print_flags procedure. Fix 8111-007.

2000-09-08  Laurent Pautet  <pautet@inf.enst.fr>

	* xe_stubs.adb, xe_utils.ads, xe_utils.adb: Move storage supports
 	like DFS into the Storages hierarchy in order to have a model
 	similar to the Protocoles one.

2000-09-07  Laurent Pautet  <pautet@inf.enst.fr>

	* xe_check.adb: Remove use of Get_File_Name.

2000-09-06  Laurent Pautet  <pautet@inf.enst.fr>

	* xe_utils.adb, xe_check.adb: Use immediate fix to solve problem
 	of incorrect use of Get_File_Name, File_Name_Of_Spec and
	File_Name_Of_Body.

2000-07-03  Laurent Pautet  <pautet@inf.enst.fr>

	* xe_defs.ads, Makefile.am, Makefile.in: Create two functions to
 	return default protocol data and name.

	* xe_back.adb, xe_back.ads: Add fields RCI_Or_RACW and Use_Tasking
 	to partition info with their accessors. Export Add_Location.

	* xe_check.adb: Compute whether a unit needs tasking and store the
 	result in ali info.

	* xe_stubs.adb: Factorize code and define new subprograms
 	Build_Location_String, Add_Protocol, Create_File and
 	Close_File. Compute whether partition is a pure client partition -
 	that is a partition which partition id can be recycled - and then
 	whether partition may have a light pcs - that is a pure client
 	partition without tasking. Generate partition elaboration code
 	according Use_Tasking and RCI_Or_RACW flags. With Tasking or