@@ -1,3 +1,8 @@
+2000-11-14  Laurent Pautet  <pautet@scapin.enst.fr>
+
+	* xe_utils.adb: Set new parameter And_Save for procedure
+ 	Scan_Make_Arg to True.
+
 2000-11-09  Pascal Obry  <obry@gnat.com>
 
 	* config.sdefault: change to use files instead of pipe to work
